wordpress/wordpress.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: wordpress:4.8-apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          readinessProbe:
                  httpGet:
                          path: /readme.html
                          port: 80
                  initialDelaySeconds: 5
                  periodSeconds: 10
          volumeMounts:
            - mountPath: /var/www/html/wp-content/uploads
              name: mypvc
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "chown -R www-data:www-data /var/www/html/wp-content/uploads"]
      volumes:
        - name: mypvc
          persistentVolumeClaim:
            claimName: fileserver-claim
            readOnly: false
