wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  annotations:
          cloud.google.com/neg: '{"ingress": true}'
          beta.cloud.google.com/backend-config: '{"ports": {"80":"wordpress-backendconfig"}}'
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
