wordpress/wordpress-basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  backend:
    serviceName: wordpress
    servicePort: 80
